[package]
name = "pi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
argh = "0.1.7"
command-ext = { git = "https://github.com/Alex-Shand/command-ext.git" }
defer = "0.1.0"
home = "0.5.3"
nix = "0.24.1"
once_cell = "1.12.0"
sealed = "0.6.0"
sliding_windows = "3.0.0"
tempfile = "3.3.0"
