[package]
name = "pi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
argh = "0.1.13"
command-ext = { git = "https://github.com/Alex-Shand/command-ext.git" }
defer = "0.2.1"
home = "0.5.11"
nix = { version = "0.30.1", features = ["user"] }
sealed = "0.6.0"
sliding_windows = "3.0.0"
tempfile = "3.20.0"
