[package]
name = "pi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
argh = "0.1.14"
command-ext = { git = "https://github.com/Alex-Shand/command-ext.git" }
defer = "0.2.1"
home = "0.5.12"
nix = { version = "0.31.2", features = ["user"] }
sealed = "0.6.0"
sliding_windows = "3.0.0"
tempfile = "3.25.0"
